--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ google_analytics: UA-110598420-3
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://serhanozcan.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
